<resources>
    <string name="app_name">ex3_xlm</string>
    <!-- label -->
    <string name="label_nom">Nom</string>
    <string name="label_prenom">Prénom</string>
    <string name="label_age">Age</string>
    <string name="label_domainecomp">Domaine de compétences</string>
    <string name="label_num">Numéro de téléphone</string>
    <string name="label_button">Valider</string>
    <!-- hint -->
    <string name="hint_nom">Entrez votre nom</string>
    <string name="hint_prenom">Entrez votre prénom</string>
    <string name="hint_age">Entrez votre âge</string>
    <string name="hint_domainecomp">Entrez votre domaine de compétences</string>
    <string name="hint_num">Entrez votre numéro de téléphone</string>

</resources>