<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- nom -->
    <TextView
        android:id="@+id/tvNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/hint_nom"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNom" />

    <!-- prénom -->
    <TextView
        android:id="@+id/tvPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_prenom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNom"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/etPrenom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="givenName"
        android:hint="@string/hint_prenom"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrenom" />

    <!-- age -->
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_age"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPrenom" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="age"
        android:hint="@string/hint_age"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAge" />

    <!-- domaine de competences -->
    <TextView
        android:id="@+id/tvDomaine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_domainecomp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAge" />

    <EditText
        android:id="@+id/etDomaine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="jobTitle"
        android:hint="@string/hint_domainecomp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDomaine" />

    <!-- telephone -->
    <TextView
        android:id="@+id/tvTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_num"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDomaine" />

    <EditText
        android:id="@+id/etTelephone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/hint_num"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTelephone" />
    <!-- Valider -->
    <Button
        android:id="@+id/btnValider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_button"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTelephone" />

</androidx.constraintlayout.widget.ConstraintLayout>